LEOS Prototype v3.1.0