@@ -1,4 +1,3 @@
 -Xms256m
 -Xmx512m
--XX:MaxPermSize=256m
 -Djava.awt.headless=true
